--- a/contacto.html
+++ b/contacto.html
@@ -47,7 +47,7 @@
                 <nav id="menu-principal" class="collapse">
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <!-- <li><a href="nosotros.html">Nosotros</a></li> -->
+                        <li><a href="nosotros.html">Nosotros</a></li>
                         <li><a href="servicios.html">Servicios</a></li>
                         <li class="active"><a href="contacto.html">Contacto</a></li>
                     </ul>
